--- a/blog/authors.yml
+++ b/blog/authors.yml
@@ -1,17 +1,6 @@
-endi:
-  name: Endilie Yacop Sucipto
-  title: Maintainer of Docusaurus
-  url: https://github.com/endiliey
-  image_url: https://github.com/endiliey.png
 
-yangshun:
-  name: Yangshun Tay
-  title: Front End Engineer @ Facebook
-  url: https://github.com/yangshun
-  image_url: https://github.com/yangshun.png
-
-slorber:
-  name: Sébastien Lorber
-  title: Docusaurus maintainer
-  url: https://sebastienlorber.com
-  image_url: https://github.com/slorber.png
+hustabubu:
+  name: 臭皮囊
+  title: 前端小白
+  url: https://hustabubu.github.io/
+  image_url: https://avatars.githubusercontent.com/u/123223543?v=4
